# movielens-recommender

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  test_surprise.py
docs/: data_schema.md
notebooks/: 01_preprocessing.ipynb  02_baseline_cf.ipynb  03_content_based.ipynb
results/: baseline_metrics.json
src/: data_prep.py
src/api/: app.py
